--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ texture:
 
   # generate social links in footer
   social_links:
-    twitter: thelehhman
+    twitter: 
     github:  
-    linkedIn: in/thelehhman
+    linkedIn: 
     rss: rss
  
 
